--- a/frontend/src/pages/Landing/style.css
+++ b/frontend/src/pages/Landing/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 body {
@@ -16,7 +18,6 @@ body {
     height: 100vh;
 }
 
-/* Header */
 .landing-header {
     background: #179AEB;
     padding: 15px 50px;
@@ -31,25 +32,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.Auth {
-    position: absolute;
-    right: 50px;
-}
-
-.login-button {
-    background: rgba(255, 255, 255, 0.2);
-    padding: 8px 16px;
-    border-radius: 8px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.login-button:hover {
-    background: rgba(255, 255, 255, 0.4);
 }
 
 .container {
