--- a/frontend/src/pages/Feed/Post.css
+++ b/frontend/src/pages/Feed/Post.css
@@ -1,4 +1,12 @@
-/* --- CONTAINER PRINCIPAL DO FEED --- */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Ubuntu", sans-serif;
+}
+
 .feed {
     display: flex;
     flex-direction: column;
