--- a/frontend/src/pages/Feed/Post.css
+++ b/frontend/src/pages/Feed/Post.css
@@ -29,12 +29,25 @@
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
+
+
+/*
 .post-image {
     width: 100%;
     height: 300px;
     overflow: hidden; 
 }
+*/
 
+.post-image {
+    width: 100%;
+    height: 240px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+
+/*
 .post-image img {
     width: 100%;
     height: 100%;
@@ -43,7 +56,26 @@
     object-position: center;
     border-radius: 15px;
 }
+*/
 
+.post-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+/* 📱 Mobile */
+@media (max-width: 768px) {
+    .postCard {
+        width: 92%;
+    }
+
+    .post-image {
+        height: 180px; /* mais leve no mobile */
+    }
+}
+
+/*
 .post-content {
     padding: 24px;
     display: flex;
@@ -58,12 +90,30 @@
     border-bottom: 1px solid #f0f2f5;
     padding-bottom: 12px;
 }
+*/
+
+.post-content {
+    padding: 20px 24px 24px;
+}
+
+.postCard h3 {
+    margin-top: 8px;
+    margin-bottom: 14px;
+    font-size: 1.25rem;
+    font-weight: 600;
+
+        border-bottom: none;
+    position: relative;
+}
+
 
 .postCard p {
     font-size: 1.05rem;
     color: #333333;
     line-height: 1.6;
     margin: 0;
+    margin-top: 12px;
+    font-size: 1.05rem;
 }
 
 /* --- DATAS (METADADOS) --- */
@@ -246,4 +296,55 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 12px;
+}
+
+.confirm-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px 25px;
+    border-radius: 8px;
+    width: 400px;
+    max-width: 90%;
+    z-index: 1001;
+}
+
+.confirm-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.btn-cancelar {
+    background: none;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.btn-excluir {
+    background: #e53935;
+    color: white;
+    border: none;
+    padding: 8px 14px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.post-author {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 0.9rem;
+    color: #000000;
+    margin-bottom: 6px;
+}
+
+.post-author img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
 }
